quick fix (contrast)

--- a/style.css
+++ b/style.css
@@ -766,7 +766,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #923926;
+    background-color: #a24936;
 }
 
 .tc-white {
@@ -779,12 +779,12 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #923926;
+    background: #a24936;
     color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine:hover {
-    background: #721906!important;
+    background: #822916!important;
     color: #FFFFFF!important;
 }
 
@@ -797,11 +797,11 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-    color: #923926!important;
+    color: #a24936!important;
 }
 
 .ltc-atomic-tangerine:hover {
-    color: #721906!important;
+    color: #822916!important;
 }
 
 .icon-dark-slate-blue {
